WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271519
[GStreamer][WebRTC] Caps negotiation failure when ssrc-audio-level RTP extension is requested
https://bugs.webkit.org/show_bug.cgi?id=271519
Summary
[GStreamer][WebRTC] Caps negotiation failure when ssrc-audio-level RTP extens...
Philippe Normand
Reported
2024-03-23 05:24:45 PDT
The capsfilter downstream of the payloader has "extmap-3=(string)urn:ietf:params:rtp-hdrext:ssrc-audio-level" in its caps, but the payloader src pad caps has "extmap-3=(string)< "", urn:ietf:params:rtp-hdrext:ssrc-audio-level, "vad\=on" >"... I'll disable this extension for the time being.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-03-23 05:30:49 PDT
https://github.com/WebKit/WebKit/pull/26370
Philippe Normand
Comment 2
2024-05-13 02:56:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28464
EWS
Comment 3
2024-05-14 00:30:35 PDT
Committed
278738@main
(d6d7f3edf374): <
https://commits.webkit.org/278738@main
> Reviewed commits have been landed. Closing PR #28464 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2024-05-14 00:31:17 PDT
<
rdar://problem/128047848
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug