[GStreamer][WebRTC] Caps negotiation failure when ssrc-audio-level RTP extension is requested https://bugs.webkit.org/show_bug.cgi?id=271519

Reviewed by Xabier Rodriguez-Calvar.

When not present in caps, the vad support of the ssrc-audio-level extension should be enabled. In
order to prevent caps negotiation issues with downstream, explicitely set it.

* LayoutTests/platform/glib/fast/mediastream/RTCPeerConnection-inspect-answer-expected.txt:
* LayoutTests/platform/glib/fast/mediastream/RTCPeerConnection-inspect-offer-expected.txt:
* Source/WebCore/platform/graphics/gstreamer/GStreamerRegistryScanner.h:
* Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingAudioSourceGStreamer.cpp:
(WebCore::RealtimeOutgoingAudioSourceGStreamer::setPayloadType):

Canonical link: https://commits.webkit.org/278738@main