Source/WebCore/platform/graphics/gstreamer/GStreamerRegistryScanner.h
@@ -179,25 +179,26 @@ private:
     void fillAudioRtpCapabilities(Configuration, RTCRtpCapabilities&);
     void fillVideoRtpCapabilities(Configuration, RTCRtpCapabilities&);
 
+#define WEBRTC_EXPERIMENTS_HDREXT "http://www.webrtc.org/experiments/rtp-hdrext/"
     Vector<const char*> m_commonRtpExtensions {
         "http://www.ietf.org/id/draft-holmer-rmcat-transport-wide-cc-extensions-01",
-        "http://www.webrtc.org/experiments/rtp-hdrext/abs-send-time",
+        WEBRTC_EXPERIMENTS_HDREXT "abs-send-time",
         GST_RTP_HDREXT_BASE "sdes:mid",
         GST_RTP_HDREXT_BASE "sdes:repaired-rtp-stream-id",
         GST_RTP_HDREXT_BASE "sdes:rtp-stream-id",
         GST_RTP_HDREXT_BASE "toffset"
     };
     Vector<const char*> m_allAudioRtpExtensions {
-        // This extension triggers caps negotiation issues. See https://bugs.webkit.org/show_bug.cgi?id=271519.
-        // "urn:ietf:params:rtp-hdrext:ssrc-audio-level"
+        GST_RTP_HDREXT_BASE "ssrc-audio-level"
     };
     Vector<const char*> m_allVideoRtpExtensions {
-        "http://www.webrtc.org/experiments/rtp-hdrext/color-space",
-        "http://www.webrtc.org/experiments/rtp-hdrext/playout-delay",
-        "http://www.webrtc.org/experiments/rtp-hdrext/video-content-type",
-        "http://www.webrtc.org/experiments/rtp-hdrext/video-timing",
+        WEBRTC_EXPERIMENTS_HDREXT "color-space",
+        WEBRTC_EXPERIMENTS_HDREXT "playout-delay",
+        WEBRTC_EXPERIMENTS_HDREXT "video-content-type",
+        WEBRTC_EXPERIMENTS_HDREXT "video-timing",
         "urn:3gpp:video-orientation"
     };
+#undef WEBRTC_EXPERIMENTS_HDREXT
 
     std::optional<Vector<RTCRtpCapabilities::HeaderExtensionCapability>> m_audioRtpExtensions;
     std::optional<Vector<RTCRtpCapabilities::HeaderExtensionCapability>> m_videoRtpExtensions;
